canvas-medical-solution

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="full-column">
-        <div class="header">
+      <div class="header">
+        <div class="full-column">
           <img src="./images/logo-blue.svg" alt="canvas logo" id="logo">
           <div class="nav-links">
             <button>Product</button>
@@ -46,32 +46,88 @@
       </div>
     </div>
     <div class="row">
-      <div class="row">
-        <div class="full-column">
-          <div class="locations">
-            <h2>Clinicians Prefer Canvas</h2>
-            <p>
-              Physician-owned primary care practices across
-              the country have already made Canvas the fabric
-              of their care.
-            </p>
+      <div class="locations">
+        <div class="row">
+          <div class="full-column">
+            <div class="locations-header">
+              <h2>Clinicians Prefer Canvas</h2>
+              <p>
+                Physician-owned primary care practices across
+                the country have already made Canvas the fabric
+                of their care.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="half-column">
+            <ul>
+              <li>Cascade Family Practice, Portland OR</li>
+              <li>Temescal Creek Medicine, Oakland CA</li>
+              <li>San Juan Healthcare, Friday Harbor WA</li>
+            </ul>
+          </div>
+          <div class="half-column">
+            <ul>
+              <li>Ward Medical Clinic, Bonifay FL</li>
+              <li>Caribou Medical, Towanda PA</li>
+              <li>Bay Tree Family Care, Red Bay AL</li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="row">
+    </div>
+    <div class="row">
+      <div class="learn-more">
+        <div class="full-column">
+          <div class="text">
+            <h2>Ready to learn more?</h2>
+            <p>Schedule a private meeting now</p>
+          </div>
+          <div class="button">
+            <button>Get Started</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="contact">
         <div class="half-column">
-          <ul>
-            <li>Cascade Family Practice, Portland OR</li>
-            <li>Temescal Creek Medicine, Oakland CA</li>
-            <li>San Juan Healthcare, Friday Harbor WA</li>
-          </ul>
+          <div class="address">
+            <img src="./images/logo-white.png" alt="logo white">
+            <div class="address-text">
+              2307 Irving Street, Suite 228<br/>
+              San Francisco, CA 94122<br/>
+              (800) 370-1416<br/>
+              info@canvasmedical.com
+            </div>
+          </div>
         </div>
         <div class="half-column">
-          <ul>
-            <li>Ward Medical Clinic, Bonifay FL</li>
-            <li>Caribou Medical, Towanda PA</li>
-            <li>Bay Tree Family Care, Red Bay AL</li>
-          </ul>
+          <div class="half-column">
+            <ul>
+              <li>COMPANY</li>
+              <li>About Us</li>
+              <li>Blog</li>
+            </ul>
+          </div>
+          <div class="half-column">
+            <ul>
+              <li>PRODUCT</li>
+              <li>Product</li>
+              <li>Implementation</li>
+              <li>For Health Plans</li>
+              <li>Security</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="footer">
+        <div class="full-column">
+          <button>Privacy &amp; Terms</button>
+          <button>Contact Us</button>
         </div>
       </div>
     </div>
